--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "ethers": "^5.6.4",
     "next": "12.1.5",
+    "nft.storage": "^6.2.0",
+    "phaser": "^3.55.2",
     "react": "18.0.0",
     "react-dom": "18.0.0"
   },
@@ -17,8 +20,11 @@
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "autoprefixer": "^10.4.4",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.24",
     "typescript": "4.6.3"
   }
 }
