--- a/public/assets/tilemap_snow.json
+++ b/public/assets/tilemap_snow.json
@@ -197,6 +197,17 @@
                 }, 
                 {
                  "height":70,
+                 "id":12,
+                 "name":"platformB",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":210,
+                 "x":977.786216062275,
+                 "y":4406.68312132143
+                }, 
+                {
+                 "height":70,
                  "id":10,
                  "name":"platformA",
                  "rotation":0,
@@ -205,6 +216,127 @@
                  "width":210,
                  "x":560.091133472565,
                  "y":6647.04765521169
+                }, 
+                {
+                 "height":70,
+                 "id":13,
+                 "name":"platformB",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":210,
+                 "x":1220.80880956901,
+                 "y":5811.65749003227
+                }, 
+                {
+                 "height":70,
+                 "id":14,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":714.952534649706,
+                 "y":5731.09075374976
+                }, 
+                {
+                 "height":70,
+                 "id":15,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":1138.34345927473,
+                 "y":5319.09151319537
+                }, 
+                {
+                 "height":70,
+                 "id":16,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":236.501803683311,
+                 "y":4965.94930700589
+                }, 
+                {
+                 "height":70,
+                 "id":17,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":321.939434213025,
+                 "y":4476.10689196886
+                }, 
+                {
+                 "height":70,
+                 "id":18,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":413.447681103871,
+                 "y":3909.0398620161
+                }, 
+                {
+                 "height":70,
+                 "id":19,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":206.4718282867,
+                 "y":3207.62169413568
+                }, 
+                {
+                 "height":70,
+                 "id":20,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":325.291299348409,
+                 "y":2582.86124952089
+                }, 
+                {
+                 "height":70,
+                 "id":21,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":570.59601379839,
+                 "y":1406.16519739364
+                }, 
+                {
+                 "height":70,
+                 "id":22,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":835.065159064776,
+                 "y":892.55845151399
+                }, 
+                {
+                 "height":70,
+                 "id":23,
+                 "name":"coin",
+                 "rotation":0,
+                 "type":"",
+                 "visible":true,
+                 "width":70,
+                 "x":275.463779225757,
+                 "y":551.431582981985
                 }],
          "opacity":1,
          "type":"objectgroup",
@@ -213,7 +345,7 @@
          "y":0
         }],
  "nextlayerid":3,
- "nextobjectid":12,
+ "nextobjectid":24,
  "orientation":"orthogonal",
  "renderorder":"right-down",
  "tiledversion":"1.8.4",
