--- a/package.json
+++ b/package.json
@@ -18,13 +18,15 @@
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "socket.io": "^4.5.0",
-    "socket.io-client": "^4.5.0"
+    "socket.io-client": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "17.0.25",
     "@types/react": "18.0.6",
     "@types/react-dom": "18.0.2",
+    "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.4",
     "eslint": "8.14.0",
     "eslint-config-next": "12.1.5",
