--- a/package.json
+++ b/package.json
@@ -3,14 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "ts-node server",
+    "dev": "tsc --project tsconfig.server.json && node .next/production-server/server.js",
     "build": "next build && tsc --project tsconfig.server.json",
     "postinstall": "npm run build",
     "start": "NODE_ENV=production node .next/production-server/server.js",
     "lint": "next lint"
   },
   "dependencies": {
-    "ethers": "^5.6.4",
+    "@rainbow-me/rainbowkit": "^0.1.0",
+    "ethers": "^5.6.5",
     "express": "^4.18.1",
     "next": "12.1.5",
     "nft.storage": "^6.2.0",
@@ -19,7 +20,8 @@
     "react-dom": "18.0.0",
     "socket.io": "^4.5.0",
     "socket.io-client": "^4.5.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "wagmi": "^0.3.5"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
