--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.1",
+    "@heroicons/react": "^1.0.6",
     "@rainbow-me/rainbowkit": "^0.1.0",
     "ethers": "^5.6.5",
     "express": "^4.18.1",
